# acram-alpha

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  diferentiator  differentiated.tex  differentiator.cbp  input.txt  main.cpp
asserts/: my_assert.h
containers/auto_free/: auto_free.cpp  auto_free.h
containers/bor/: bor.cpp  bor.h
containers/my_string/: my_string.cpp  my_string.h
containers/my_vector/: my_vector.cpp  my_vector.h
differentiator_tree/: expression_parser.cpp  expression_parser.h  expression_tree.cpp  expression_tree.h  info.h  tree_dfs.cpp  tree_dfss.h  tree_node.h
work_with_file_functions/: file_work_functions.cpp  file_work_functons.h
